modules/tree-sitter-smarts/grammar.js
    source_file: $ => seq(
      optional($.header),
      repeat($._line),
      // A final line with no trailing newline.
      optional($._line_body),
    ),

    _line: $ => seq(optional($._line_body), $._eol),

    _line_body: $ => choice(
      seq(optional($._ws), $.comment),
      $.record,
      $._ws,
    ),

    // `C#C` is ethyne, so `#` is a triple bond mid-line; at line start no
    // structure may begin with a bond, which makes the comment unambiguous.
    record: $ => seq(
      $.structure,
      optional(seq(optional($._ws), $.cx_layer)),
      optional(seq($._ws, $.name)),
      optional($._ws),
    ),

    // The extended layer: a `|` pair around a comma-separated list of fields,
    // each read by RDKit's dispatch on its first character (CXSmilesOps.cpp,
    // `parse_it`). That dispatch skips whatever it does not recognise, so a
    // stray comma is accepted here too, but an unknown field is an error rather
    // than an annotation silently dropped. Nothing inside is whitespace
    // significant and text fields may hold spaces, so the `|` pair is the only
    // thing bounding the layer.
    _ws: _ => /[ \t]+/,

    // `MolFromSmarts` takes a lone structure, `ReactionFromSmarts` requires the
    // arrow; the grammar spans both. A reaction has exactly two `>`: one is "a
    // reaction requires at least one >>" and three is "multi-step reactions not
    // supported", both rejected. So `C>>C` states an empty agent side rather
    // than leaving it out, and every side may be empty — expressed here rather
    // than as an empty-matching `side` rule, which cannot be generated.
    structure: $ => choice(
      $.chain,
      seq(optional($.chain), '>', optional($.chain), '>', optional($.chain)),
    ),

    // A single optional recursive tail: `branched_atom (bond? chain)*` splits
    // `CCC` two ways and does not generate.
    chain: $ => seq(
      $.branched_atom,
      optional(seq(optional(choice($.bond, '.')), $.chain)),
    ),

    // `(` always follows an atom, so a component group leading a reaction side
    // (`(CC.O)>>CC`) is an ERROR node. RDKit reads it as one reactant and writes
    // it back out in the same form; fixing it means moving `.` out of `chain`.
    branched_atom: $ => seq($._atom, repeat($.ring_bond), repeat($.branch)),

    branch: $ => seq('(', optional($.bond), $.chain, ')'),

    _atom: $ => choice(
      $.organic_symbol,
      $.aromatic_symbol,
      $.wildcard,
      $.bracket_atom,
    ),

    // The marker only announces how many digits follow, so it is not part of the
    // number: one digit bare, exactly two after `%`, any number inside `%(...)`.
    // Three tokens under one name, differing only in length.
    ring_bond: $ => seq(optional($.bond), choice(
      alias($._ring_digit, $.ring_number),
      seq('%', alias($._ring_digits, $.ring_number)),
      seq('%', '(', alias($._ring_digits_long, $.ring_number), ')'),
    )),

    _ring_digit: _ => /[0-9]/,
    _ring_digits: _ => /[0-9][0-9]/,
    _ring_digits_long: _ => /[0-9]+/,

    bond: $ => seq(
      $.bond_prim,
      repeat(seq(optional(choice('&', ',', ';')), $.bond_prim)),
    ),

    // `!` is a prefix on any primitive, not a special `!@` token: `C!-!=C`
    // reads as `C!-&!=C`.
    //
    // `->` and `<-` are the dative bonds, one lexer token each in both dialects
    // (smiles.ll, smarts.ll) and primitives like any other, so they nest in a
    // bond expression (`[C]-,->[O]`) and close a ring (`N->1CC1`). A doubled
    // backslash is the same bond as a single one: the lexers read `[\\]{1,2}`.
    bond_prim: $ => seq(
      optional('!'),
      choice('-', '=', '#', '$', ':', '/', '\\', '\\\\', '~', '@', '->', '<-'),
    ),

    // Outside brackets the alphabet is a much smaller set than inside, and the
    // two must stay disjoint: `Sn` is sulfur + nitrogen, `[Sn]` is tin.
    organic_symbol: _ => choice(...symbols.bareAliphatic),
    aromatic_symbol: _ => choice(...symbols.bareAromatic),
    wildcard: _ => choice('*', 'A', 'a'),

    bracket_atom: $ => seq('[', $._atom_expr, ']'),

    // Named for their operator: SMARTS precedence is `&` > `,` > `;`, so the
    // outside-in nesting is low-AND → OR → high-AND. `&` is implicit when
    // primitives are juxtaposed.
    _atom_expr: $ => choice($._prim, $.and_low, $.or_expr, $.and_high),
    and_low: $ => prec.left(1, seq($._atom_expr, ';', $._atom_expr)),
    or_expr: $ => prec.left(2, seq($._atom_expr, ',', $._atom_expr)),
    and_high: $ => prec.left(3, seq($._atom_expr, optional('&'), $._atom_expr)),

    _prim: $ => choice(
      $.negation,
      $.isotope,
      $.element_symbol,
      alias($._bracket_aromatic, $.aromatic_symbol),
      $.hydrogen,
      $.wildcard,
      $.chirality,
      $.charge,
      $.atomic_number,
      $.property_primitive,
      $.recursive,
      $.atom_class,
    ),

    negation: $ => prec(4, seq('!', $._prim)),

    // Each of these is a token: otherwise the implicit `&` between primitives
    // makes `[--]` (charge −2 vs two negations), `[#6]` and `[C:1]` ambiguous.
    isotope: _ => /[0-9]+/,
    element_symbol: _ => choice(...symbols.bracketElement),
    hydrogen: $ => prec.right(1, seq(
      alias('H', $.property_name), optional($.count))),

    chirality: _ => token(seq('@', optional(choice(
      '@',
      seq(choice('TH', 'AL', 'SP', 'TB', 'OH'), /[0-9]*/),
    )))),

    charge: _ => token(choice(/\+\+*/, /\+[0-9]+/, /--*/, /-[0-9]+/)),

    // Its own node, separate from `property_primitive`: `[#7]` is nitrogen, so
    // the element-colouring layer has to reach it.
    atomic_number: _ => token(seq('#', /[0-9]+/)),

    // `^` is the one letter whose digit is mandatory, and the one whose digit
    // names a hybridisation rather than counting anything.
    property_primitive: $ => prec.right(choice(
      seq(
        alias(new RegExp(`[${classBody(symbols.propertyPrimitives)}]`), $.property_name),
        optional($.count),
      ),
      seq(
        alias(new RegExp(`[${classBody(symbols.propertyPrimitivesWithDigit)}]`), $.property_name),
        $.count,
      ),
    )),

    count: _ => /[0-9]+/,

    // Nests a chain, not a structure: `[$(C>>C)]` is rejected by RDKit. `$` is
    // the recursion marker and the parens are ordinary grouping, so they are
    // three tokens. Safe despite `$` also being the quadruple bond, because
    // RDKit rejects a bond before a branch: `C$(CC)C` never occurs.
    recursive: $ => seq('$', '(', $.chain, ')'),

    // `:` prefixes the map number rather than being part of it, so the two are
    // separate nodes. Splitting is safe here although the other primitives must
    // each be one token: `:` starts nothing else inside a bracket atom, and the
    // digits are only reachable through it.
    atom_class: $ => seq(':', $.class_number),
    class_number: _ => /[0-9]+/,
  },
});
